--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@ footer{
     height: 5rem;
     border-radius: 5px;
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .intro-paragraph{
@@ -113,7 +113,6 @@ footer{
 }
 .experience{
     display: flex;
-    /*flex-direction: row-reverse;*/
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
@@ -163,6 +162,11 @@ a:hover, a:active, span:hover{
     text-align: center;
 }
 
+.tech-logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 /* FOOTER */
